Revision history for perl distribution Convos

6.02 Not Released
 - Add support for convos install [--bot,--ldap]
 - Add default lang to stash #578
 - Fix placing password toggle in sidebar

6.01 2021-02-23T08:48:00+0900
 - Add support for setting source IP for a connection
 - Changed the design on the login screen to only show one form
 - Fix clipping of text in the heading
 - Fix clicking on a the conversation name toggles the settings pane
 - Fix race condition where "join" event would override the "topic" message

6.00 2021-02-22T09:30:00+0900
 - Changed from Nordaaker to github.com/convos-chat and hub.docker.com/r/convos
 - Highlights since 5.00
   * Add "Facts" bot action
   * Add "compact display mode" as Viewport option
   * Add /ns (msg nickserv) and /cs (msg chanserv) aliases
   * Add better user experience for +i (invite only) channels
   * Add rendering of banlist, exceptlist, invitelist and quietlist
   * Add support for EXTERNAL and PLAIN SASL authentication
   * Add support for WEBIRC
   * Add support for negotiating IRCv3 capabilities
   * Add support for nicer message-of-the-day (MOTD) server messages
   * Add support for translations, and got translated to Italian, Norwegian and Spanish
   * Changed "chanserv" and "nickserv" to be inside the connection conversation
   * Compatible with latest Mojolicious 9.0 and M::P::OpenAPI 4.0
   * Improved animations
   * Moved video button to chat input
   * Render Google meet, Webex and Whereby as video invite links
 - Contributors:
   * Abhijit Menon-Sen
   * Iván Ávalos
   * Jan Henning Thorsen
   * José Joaquín Atria
   * Marcus Ramberg
   * Megaf
   * SerHack
   * Thibault Duponchelle

5.32 2021-02-22T09:10:00+0900
 - Can toggle password inputs as plain text #569
 - Add alert icon if a channel is frozen in the sidebar #568
 - Changed login screen to be side-by-side

5.31 2021-02-21T14:30:00+0900
 - Fix styling on login screen
 - Allow other hosts than "localhost" to skip the connect queuing
