@@ -4,6 +4,7 @@ Revision history for perl distribution Convos
  - Add support for convos install [--bot,--ldap]
  - Add default lang to stash #578
  - Fix placing password toggle in sidebar
+ - Fix "/reconnect" command
 
 6.01 2021-02-23T08:48:00+0900
  - Add support for setting source IP for a connection
